도메인 수정 후 service 적용 및 예외 처리 로직 추가
1. 예외처리를 위한 exception폴더 추가 GlobalException 파일 추가
2. MyService 바뀐 도메인에 맞춰 수정 및 비밀번호 예외처리 로직 추가
3. 예외처리 응답(response) code와 message를 반환하는 로직 추가
4. 사용하지않는 서비스 삭제